Changed MainActivity and layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">phase3</string>
-    <string name="url">http://192.168.0.23:80/Phase2/</string>
+    <string name="url">http://192.168.1.16/Phase3/</string>
+    <string name="student_access">Student</string>
+    <string name="instructor_access">Instructor</string>
+    <string name="welcome">Welcome!</string>
+    <string name="choose_your_role">Choose your role.</string>
 </resources>
