--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="email">Email:</string>
     <string name="password">Password:</string>
     <string name="login">Login</string>
+    <string name="instructor_login">Instructor Login</string>
+    <string name="student_login">Student Login</string>
+    <string name="create_account">Create Account</string>
+    <string name="log_in">Log In</string>
+    <string name="welcome_student">Welcome Student</string>
 </resources>
