--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">phase3</string>
-    <string name="url">http://192.168.1.27/Phase3/</string>
+    <string name="url">http://192.168.1.10/Phase3/</string>
     <string name="student_access">Student</string>
     <string name="instructor_access">Instructor</string>
     <string name="welcome">Welcome!</string>
@@ -29,4 +29,5 @@
     <string name="gpa_label">GPA:</string>
     <string name="total_credits_label">Total Credits:</string>
     <string name="student_schedule_title">My Schedule</string>
+    <string name="no_courses_for_the_selected_semester_and_year">No courses for the selected semester and year.</string>
 </resources>
